fixed wrong color for headings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,12 +25,6 @@ p
 }
 
 
-.ProjectTitle
-{
-    color: var(--AccentedTextColor);
-}
-
-
 .SidebarHeader
 {
     font-family: 'Libre Baskerville', serif;
